[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/fundo tela inicial e sobre o jogo.jpg" type="Texture" id=1]
[ext_resource path="res://Sprites/som on.jpg" type="Texture" id=2]
[ext_resource path="res://Sprites/botao sair.jpg" type="Texture" id=3]
[ext_resource path="res://Sprites/botao o jogo.jpg" type="Texture" id=4]
[ext_resource path="res://Sprites/logo jogo genius.png" type="Texture" id=5]
[ext_resource path="res://Sprites/botao jogar.jpg" type="Texture" id=6]
[ext_resource path="res://Scripts/MainScene.gd" type="Script" id=7]
[ext_resource path="res://Sprites/nome do jogo.jpg" type="Texture" id=8]
[ext_resource path="res://Sprites/som off.jpg" type="Texture" id=9]
[ext_resource path="res://Sprites/botao voltar.jpg" type="Texture" id=10]
[ext_resource path="res://Fonts/Quicksand-Bold.otf" type="DynamicFontData" id=11]
[ext_resource path="res://SFX/menu_selection_1.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 14
outline_color = Color( 0.215686, 0.184314, 0.184314, 1 )
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=2]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Button_Jogar:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.55, 0.55 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Button_Sair:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.55, 0.55 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Button_Sobre_O_Jogo:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.55, 0.55 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "button_voltar"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Button_Voltar:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.55, 0.55 ), Vector2( 0.5, 0.5 ) ]
}

[node name="MainScene" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 299.401, 399.995 )
scale = Vector2( 1.02652, 1.02652 )
texture = ExtResource( 1 )

[node name="Sobre_O_Jogo" type="Sprite" parent="."]
position = Vector2( 299.401, 399.995 )
scale = Vector2( 1.02652, 1.02652 )
texture = ExtResource( 1 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 293.64, 671.686 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Nome_Jogo" type="Sprite" parent="."]
position = Vector2( 307.318, 218.781 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Button_Jogar" type="Button" parent="."]
margin_left = 177.0
margin_top = 365.891
margin_right = 673.0
margin_bottom = 477.891
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Sobre_O_Jogo" type="Button" parent="."]
margin_left = 177.0
margin_top = 430.0
margin_right = 673.0
margin_bottom = 542.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Sair" type="Button" parent="."]
margin_left = 177.0
margin_top = 496.0
margin_right = 673.0
margin_bottom = 608.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Volume" type="Button" parent="."]
margin_left = 457.543
margin_top = 58.3051
margin_right = 593.543
margin_bottom = 188.305
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Volume_Mute" type="Button" parent="."]
margin_left = 457.543
margin_top = 58.3051
margin_right = 593.543
margin_bottom = 188.305
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Voltar" type="Button" parent="."]
margin_left = 177.0
margin_top = 543.0
margin_right = 673.0
margin_bottom = 655.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sobre_O_Jogo_Text" type="RichTextLabel" parent="."]
modulate = Color( 0.462745, 0.447059, 0.447059, 1 )
margin_left = 83.0
margin_top = 140.0
margin_right = 539.0
margin_bottom = 677.0
custom_fonts/normal_font = SubResource( 1 )
text = "O jogo ‘Siga o Mestre’ é uma versão do jogo GENIUS e, aqui, o objetivo é trazer diversão aliada ao uso de habilidades cognitivas.
Nesse jogo, além do uso de memória, é preciso agilidade, concentração e atenção para ir fazendo a sequência correta de cores e formas. 
Dessa maneira, enquanto joga, a criança desenvolve habilidades motoras e raciocínio rápido.

Trilha Sonora:
AzzyGames
https://devdevious.itch.io
(https://www.patreon.com/sharkybutt)

Efeitos Sonoros:
1) https://freesound.org/people/NenadSimic/
2) https://freesound.org/people/suntemple/
3) https://freesound.org/people/mickleness/
4) https://opengameart.org/users/haeldb
5) https://freesound.org/people/Raclure/sounds/483598/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Animation" type="AnimationPlayer" parent="."]
anims/button_jogar = SubResource( 2 )
anims/button_sair = SubResource( 3 )
anims/button_sobre_o_jogo = SubResource( 4 )
anims/button_voltar = SubResource( 5 )

[node name="Button_Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
[connection signal="pressed" from="Button_Jogar" to="." method="_on_Button_Jogar_pressed"]
[connection signal="pressed" from="Button_Sobre_O_Jogo" to="." method="_on_Button_Sobre_O_Jogo_pressed"]
[connection signal="pressed" from="Button_Sair" to="." method="_on_Button_Sair_pressed"]
[connection signal="pressed" from="Button_Volume" to="." method="_on_Button_Volume_pressed"]
[connection signal="pressed" from="Button_Volume_Mute" to="." method="_on_Button_Volume_Mute_pressed"]
[connection signal="pressed" from="Button_Voltar" to="." method="_on_Button_Voltar_pressed"]
